--- a/paper.tex
+++ b/paper.tex
@@ -300,7 +300,7 @@ Let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cC
 
 Consider the following assignment $\GL_k\left(\finiteField\right) \to \cComplex$
 $$\Phi_{\chi}\left(g\right) = \begin{dcases}
-	\chi\left(\det\left(g-\IdentityMatrix{k}\right)\right) & \text{if }\det\left(g-\IdentityMatrix{k}\right) \ne 0,\\
+	\chi\left(\det\left(\IdentityMatrix{k}-g\right)\right) & \text{if }\det\left(\IdentityMatrix{k}-g\right) \ne 0,\\
 	0 & \text{otherwise.}
 \end{dcases}$$
 It is clear that $\Phi_{\chi}$ is a class function of $\GL_k\left(\finiteField\right)$.
@@ -313,23 +313,23 @@ The goal of this section is to express $\dblJacobiSumScalar{\tau}{\chi}$ in term
 
 \begin{proposition}\label{prop:doubling-for-gln-in-terms-of-kondo}
 	We have the identity
-	$$\Phi_{\chi}\left(g\right) = q^{-\frac{k^2}{2}} \GaussSumScalar{\chi_{\GL_k}}{\fieldCharacter} \sum_{\substack{x, y \in \GL_k\left(\finiteField\right)\\
+	$$\Phi_{\chi}\left(g\right) = \chi\left(-1\right)^k q^{-\frac{k^2}{2}} \GaussSumScalar{\chi_{\GL_k}}{\fieldCharacter} \sum_{\substack{x, y \in \GL_k\left(\finiteField\right)\\
 			y^{-1} x = -g}} \fieldCharacter\left(\trace x\right) \chi^{-1}\left(\det y\right) \fieldCharacter\left(\trace y\right).$$
 \end{proposition}
 \begin{proof}
-	We write $$\Phi_{\chi}\left(g\right) = \frac{1}{\sizeof{\squareMatrix_k\left(\finiteField\right)}}\sum_{X \in \squareMatrix_k\left(\finiteField\right)} \sum_{h \in \GL_k\left(\finiteField\right)} \fieldCharacter\left(\trace \left(X\left(g-\IdentityMatrix{k}-h\right)\right)\right) \chi\left(\det h\right).$$
-	By \Cref{lem:sum-vanishes-for-singular-matrices}, we can reduce the sum to $X \in \GL_k\left(\finiteField\right)$. Thus	$$\Phi_{\chi}\left(g\right) = \frac{1}{\sizeof{\squareMatrix_k\left(\finiteField\right)}} \sum_{X, h \in \GL_k\left(\finiteField\right)} \fieldCharacter\left(\trace \left(X\left(g-\IdentityMatrix{k}-h\right)\right)\right) \chi\left(\det h\right).$$
+	We write $$\Phi_{\chi}\left(g\right) = \frac{1}{\sizeof{\squareMatrix_k\left(\finiteField\right)}}\sum_{X \in \squareMatrix_k\left(\finiteField\right)} \sum_{h \in \GL_k\left(\finiteField\right)} \fieldCharacter\left(\trace \left(X\left(g-\IdentityMatrix{k}-h\right)\right)\right) \chi\left(\det\left(-h\right)\right).$$
+	By \Cref{lem:sum-vanishes-for-singular-matrices}, we can reduce the sum to $X \in \GL_k\left(\finiteField\right)$. Thus	$$\Phi_{\chi}\left(g\right) = \frac{\chi\left(-1\right)^k}{\sizeof{\squareMatrix_k\left(\finiteField\right)}} \sum_{X, h \in \GL_k\left(\finiteField\right)} \fieldCharacter\left(\trace \left(X\left(g-\IdentityMatrix{k}-h\right)\right)\right) \chi\left(\det h\right).$$
 	Changing variables $h \mapsto X^{-1} h$, we get
-	$$\Phi_{\chi}\left(g\right) = \frac{1}{\sizeof{\squareMatrix_k\left(\finiteField\right)}} \sum_{X, h \in \GL_k\left(\finiteField\right)} \fieldCharacter\left(\trace \left(Xg\right)\right) \fieldCharacter\left(-\trace h\right) \chi\left(\det h\right) \chi^{-1}\left(\det X\right) \fieldCharacter\left(-\trace X\right).$$
+	$$\Phi_{\chi}\left(g\right) = \frac{\chi\left(-1\right)^k}{\sizeof{\squareMatrix_k\left(\finiteField\right)}} \sum_{X, h \in \GL_k\left(\finiteField\right)} \fieldCharacter\left(\trace \left(Xg\right)\right) \fieldCharacter\left(-\trace h\right) \chi\left(\det h\right) \chi^{-1}\left(\det X\right) \fieldCharacter\left(-\trace X\right).$$
 	Changing variables again $h \mapsto -h$ and setting $Xg = x$ and $-X = y$, we get  
-	$$\Phi_{\chi}\left(g\right) = q^{-\frac{k^2}{2}} \GaussSumScalar{\chi_{\GL_k}}{\fieldCharacter} \sum_{\substack{x, y \in \GL_k\left(\finiteField\right)\\
+	$$\Phi_{\chi}\left(g\right) = \chi\left(-1\right)^k q^{-\frac{k^2}{2}} \GaussSumScalar{\chi_{\GL_k}}{\fieldCharacter} \sum_{\substack{x, y \in \GL_k\left(\finiteField\right)\\
 			y^{-1} x = -g}} \fieldCharacter\left(\trace x\right) \chi^{-1}\left(\det y\right) \fieldCharacter\left(\trace y\right).$$
 \end{proof}
 
-We now use this to compute $\dblJacobiSum{\tau}{\chi}$. We have that $$\dblJacobiSum{\tau}{\chi} = q^{-k^2} \GaussSumScalar{\chi_{\GL_k}}{\fieldCharacter} \sum_{x, y \in \GL_k\left(\finiteField\right)} \fieldCharacter\left(\trace x\right) \chi^{-1}\left(\det y\right) \fieldCharacter\left(\trace y\right) \tau\left(-y^{-1} x\right).$$
+We now use this to compute $\dblJacobiSum{\tau}{\chi}$. We have that $$\dblJacobiSum{\tau}{\chi} = \chi\left(-1\right)^k q^{-k^2} \GaussSumScalar{\chi_{\GL_k}}{\fieldCharacter} \sum_{x, y \in \GL_k\left(\finiteField\right)} \fieldCharacter\left(\trace x\right) \chi^{-1}\left(\det y\right) \fieldCharacter\left(\trace y\right) \tau\left(-y^{-1} x\right).$$
 The last equality implies the following result.
 \begin{theorem}\label{thm:gln-doubling-gauss-sum-in-terms-of-kondo}For any irreducible representation $\tau$ of $\GL_k\left(\finiteField\right)$ and any non-trivial character $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$, the following identity holds:
-	$$\dblJacobiSumScalar{\tau}{\chi} = \centralCharacter{\tau}\left(-1\right) \GaussSumScalar{\chi}{\fieldCharacter}^k \GaussSumScalar{\tau}{\fieldCharacter} \GaussSumScalar{\tau^{\vee} \times \chi^{-1}}{\fieldCharacter}.$$
+	$$\dblJacobiSumScalar{\tau}{\chi} = \chi\left(-1\right)^k \centralCharacter{\tau}\left(-1\right) \GaussSumScalar{\chi}{\fieldCharacter}^k \GaussSumScalar{\tau}{\fieldCharacter} \GaussSumScalar{\tau^{\vee} \times \chi^{-1}}{\fieldCharacter}.$$
 \end{theorem}
 
 \subsection{The case of classical groups}
@@ -383,7 +383,7 @@ Let $\lieAlgebra$ be the Lie algebra of $G$, consisting of all elements $A \in \
 
 
 Let $\chi \colon \multiplicativegroup{\quadraticExtension} \to \multiplicativegroup{\cComplex}$ be a character. As before, the assignment $\Phi_{\chi} \colon \GL_{\quadraticExtension}\left(\hermitianSpace\right) \to \cComplex$ given by $$\Phi_{\chi}\left(g\right) = \begin{dcases}
-\chi\left(\detQuadratic\left(g - \idmap_{\hermitianSpace}\right)\right) & \text{if }\detQuadratic\left(g - \idmap_{\hermitianSpace}\right) \ne 0\\
+\chi\left(\detQuadratic\left( \idmap_{\hermitianSpace} - g\right)\right) & \text{if }\detQuadratic\left( \idmap_{\hermitianSpace} - g\right) \ne 0\\
 0 & \text{otherwise,}
 \end{dcases}$$
 is a class function of $\GL_{\quadraticExtension}\left(\hermitianSpace\right)$.
@@ -416,9 +416,9 @@ $$\minusInvolution{\chi}\left(x\right) = \chi^{-1}\left(\involution{x}\right).$$
 	which can be rewritten as
 	$$\left(\dblJacobiSum{\rho}{\chi} f\right)\left(x\right) = \frac{1}{\sqrt{\sizeof{\lieAlgebra}}} \sum_{p \in P}  \Phi_{\chi}\left(x^{-1} p\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) v_\tau \otimes v_{\pi'}.$$
 	As before, we may write
-	$$\Phi_{\chi}\left(g\right) = q^{-k^2} \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \sum_{A \in \EndomorphismRing_{\quadraticExtension}\left(\hermitianSpace\right)} \chi^{-1}\left(\detQuadratic h\right) \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(g - \idmap_{\hermitianSpace} - h^{-1}\right)\right)\right).$$
+	$$\Phi_{\chi}\left(g\right) = q^{-k^2} \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \sum_{A \in \EndomorphismRing_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(-\detQuadratic h\right) \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(g - \idmap_{\hermitianSpace} - h\right)\right)\right).$$
 	Hence, \begin{align*}
-		q^{k^2} \sum_{p \in P} \Phi_{\chi}\left(xp\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) =& \sum_{A \in \EndomorphismRing_{\quadraticExtension}\left(\hermitianSpace\right)} \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(\detQuadratic h\right)\fieldCharacter_{\quadraticExtension}\left(\trace\left(Ah\right)\right) \\
+		\chi\left(-1\right)^k q^{k^2} \sum_{p \in P} \Phi_{\chi}\left(xp\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) =& \sum_{A \in \EndomorphismRing_{\quadraticExtension}\left(\hermitianSpace\right)} \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)} \chi\left(\detQuadratic h\right)\fieldCharacter_{\quadraticExtension}\left(\trace\left(Ah\right)\right) \\
 		& \times \sum_{p \in P} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A \left(xp - \idmap_{\hermitianSpace}\right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right).
 	\end{align*}
 	Assume that $\chi \ne 1$. By \Cref{lem:sum-vanishes-for-singular-matrices}, we can reduce the sum to $A \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)$. Let us replace $h$ with $A^{-1} h$. We get the sum
@@ -428,7 +428,7 @@ $$\minusInvolution{\chi}\left(x\right) = \chi^{-1}\left(\involution{x}\right).$$
 	Consider the inner sum over $P$, written as $$\sum_{l \in L} \sum_{u \in N} \fieldCharacter_{\quadraticExtension}\left(\trace\left(A x l u\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(l\right).$$
 	The inner sum over $N$ will vanish unless $Ax \in P$. Thus we have
 	\begin{align*}
-		q^{k^2} \sum_{p \in P} \Phi_{\chi}\left(xp\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) =& \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)}  \chi\left(\detQuadratic\left(xh\right)\right) \fieldCharacter_{\quadraticExtension}\left(\trace h\right) \\
+		\chi\left(-1\right)^k q^{k^2} \sum_{p \in P} \Phi_{\chi}\left(xp\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) =& \sum_{h \in \GL_{\quadraticExtension}\left(\hermitianSpace\right)}  \chi\left(\detQuadratic\left(xh\right)\right) \fieldCharacter_{\quadraticExtension}\left(\trace h\right) \\
 		& \times \sum_{p' \in P} \sum_{p \in P} \chi^{-1}\left(\detQuadratic p'\right) \fieldCharacter_{\quadraticExtension}\left(\trace\left(p' \left(p - x^{-1}\right)\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right).
 	\end{align*}
 	By decomposing the sum over $p' \in P$ into a sum over $N$ and $L$, we see that the inner sum over $N$ will vanish unless $p - x^{-1} \in P$, which implies that $x \in P \cap G$.
@@ -436,9 +436,9 @@ $$\minusInvolution{\chi}\left(x\right) = \chi^{-1}\left(\involution{x}\right).$$
 	Hence, we have that $\dblJacobiSum{\rho}{\chi} f$ is supported on $P$. We move to compute $\left(\dblJacobiSum{\rho}{\chi} f\right)\left(\idmap_{\hermitianSpace}\right)$. It is given by
 	\begin{equation}\label{eq:recursive-doubling-gauss-sum}
 		\frac{1}{\sqrt{\sizeof{\lieAlgebra}}} \sum_{\substack{p \in P \cap G\\
-				\detQuadratic\left(p - \idmap_{\hermitianSpace}\right) \ne 0}} \chi\left(\detQuadratic\left(p - \idmap_{\hermitianSpace}\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) v_{\tau} \otimes v_{\pi'}.
+				\detQuadratic\left(p - \idmap_{\hermitianSpace}\right) \ne 0}} \chi\left(\detQuadratic\left(\idmap_{\hermitianSpace} - p\right)\right) \left(\tau \overline{\otimes} \pi'\right)\left(p\right) v_{\tau} \otimes v_{\pi'}.
 	\end{equation}
-	Decomposing the sum \eqref{eq:recursive-doubling-gauss-sum} as a sum over $L$ and $N$, and using the fact that if $p \in P \cap G$ has Levi part with image $\left(a, g'\right) \in \GL_k\left(\quadraticExtension\right) \times G'$ then $$\detQuadratic\left(p - \idmap_{\hermitianSpace}\right) = \left(-1\right)^k \detQuadratic\left(\involution{a}\right)^{-1}\detQuadratic\left(a - \IdentityMatrix{k}\right) \det\left(\involution{\left(a - \IdentityMatrix{k}\right)}\right) \detQuadratic\left( g' - \idmap_{\hermitianSpace'}\right),$$
+	Decomposing the sum \eqref{eq:recursive-doubling-gauss-sum} as a sum over $L$ and $N$, and using the fact that if $p \in P \cap G$ has Levi part with image $\left(a, g'\right) \in \GL_k\left(\quadraticExtension\right) \times G'$ then $$\detQuadratic\left(\idmap_{\hermitianSpace} - p\right) = \left(-1\right)^k \detQuadratic\left(\involution{a}\right)^{-1}\detQuadratic\left(\IdentityMatrix{k} - a\right) \det\left(\involution{\left(\IdentityMatrix{k} - a\right)}\right) \detQuadratic\left(\idmap_{\hermitianSpace'} - g'\right),$$
 	and using the fact that $\sizeof{\lieAlgebra} = \sizeof{\lieAlgebra'} \sizeof{\squareMatrix_k\left(\finiteField\right)} \sizeof{N}^2$, where $\lieAlgebra'$ is the Lie algebra of $G'$,
 	we get that \eqref{eq:recursive-doubling-gauss-sum} equals
 	\begin{equation}
@@ -510,22 +510,22 @@ $$\NormOneGroup{2m} = \left\{ x \in \multiplicativegroup{\finiteFieldExtension{2
 \subsubsection{Split torus computation I}
 Let $\alpha \colon \multiplicativegroup{\finiteFieldExtension{k}} \to \multiplicativegroup{\cComplex}$ be a character and let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be a non-trivial character.
 
-The goal of this section is to compute $$\sum_{x \in \multiplicativegroup{\finiteFieldExtension{k}}} \alpha\left(x\right) \chi\left(\FieldNorm{k}{1}\left(x-1\right)\right).$$
+The goal of this section is to compute $$\sum_{x \in \multiplicativegroup{\finiteFieldExtension{k}}} \alpha\left(x\right) \chi\left(\FieldNorm{k}{1}\left(1-x\right)\right).$$
 Let us rewrite this as
-$$q^{-k} \sum_{z \in \finiteFieldExtension{k}} \sum_{x \in  \multiplicativegroup{\finiteFieldExtension{k}}} \sum_{y \in \multiplicativegroup{\finiteFieldExtension{k}}}\alpha\left(x\right) \chi\left(\FieldNorm{k}{1}\left(y\right)\right) \fieldCharacter_k\left(\left(y - \left(x - 1\right)\right)z\right).$$
+$$q^{-k} \sum_{z \in \finiteFieldExtension{k}} \sum_{x \in  \multiplicativegroup{\finiteFieldExtension{k}}} \sum_{y \in \multiplicativegroup{\finiteFieldExtension{k}}}\alpha\left(x\right) \chi\left(\left(-1\right)^k\FieldNorm{k}{1}\left(y\right)\right) \fieldCharacter_k\left(\left(y - \left(x - 1\right)\right)z\right).$$
 Since $\chi$ is non-trivial, when $z = 0$, the inner sum over $y$ will vanish. Hence, we have that our sum can be rewritten as
 $$q^{-k} \sum_{z \in \multiplicativegroup{\finiteFieldExtension{k}}} \sum_{x \in  \multiplicativegroup{\finiteFieldExtension{k}}} \sum_{y \in \multiplicativegroup{\finiteFieldExtension{k}}}\alpha\left(x\right) \chi\left(\FieldNorm{k}{1}\left(y\right)\right) \fieldCharacter_k\left(\left(y - \left(x - 1\right)\right)z\right).$$
 Replacing $x$ with $-z^{-1} x$ and $y$ with $z^{-1} y$, this becomes
-$$q^{-k} \alpha\left(-1\right) \sum_{z \in \multiplicativegroup{\finiteFieldExtension{k}}} \alpha^{-1}\left(z\right) \chi^{-1}\left(\FieldNorm{k}{1}\left(z\right)\right) \fieldCharacter_k\left(z\right) \sum_{x \in  \multiplicativegroup{\finiteFieldExtension{k}}} \alpha\left(x\right) \fieldCharacter_k\left(x\right) \sum_{y \in \multiplicativegroup{\finiteFieldExtension{k}}} \chi\left(\FieldNorm{k}{1}\left(y\right)\right) \fieldCharacter_k\left(y\right).$$
+$$q^{-k} \alpha\left(-1\right) \chi\left(-1\right)^k \sum_{z \in \multiplicativegroup{\finiteFieldExtension{k}}} \alpha^{-1}\left(z\right) \chi^{-1}\left(\FieldNorm{k}{1}\left(z\right)\right) \fieldCharacter_k\left(z\right) \sum_{x \in  \multiplicativegroup{\finiteFieldExtension{k}}} \alpha\left(x\right) \fieldCharacter_k\left(x\right) \sum_{y \in \multiplicativegroup{\finiteFieldExtension{k}}} \chi\left(\FieldNorm{k}{1}\left(y\right)\right) \fieldCharacter_k\left(y\right).$$
 Hence, we have the identity
-$$\sum_{x \in \multiplicativegroup{\finiteFieldExtension{k}}} \alpha\left(x\right) \chi\left(\FieldNorm{k}{1}\left(x-1\right)\right) = -q^{\frac{k}{2}} \alpha\left(-1\right) \GaussSumCharacter{\alpha^{-1}}{\chi^{-1}}{\fieldCharacter_k} \tau\left(\alpha, \fieldCharacter_k\right) \tau\left(\chi \circ \FieldNorm{k}{1}, \fieldCharacter_k\right).$$
+$$\sum_{x \in \multiplicativegroup{\finiteFieldExtension{k}}} \alpha\left(x\right) \chi\left(\FieldNorm{k}{1}\left(x-1\right)\right) = -q^{\frac{k}{2}} \chi\left(-1\right)^k \alpha\left(-1\right) \GaussSumCharacter{\alpha^{-1}}{\chi^{-1}}{\fieldCharacter_k} \tau\left(\alpha, \fieldCharacter_k\right) \tau\left(\chi \circ \FieldNorm{k}{1}, \fieldCharacter_k\right).$$
 
 \subsubsection{Split torus computation II}
 We use the results from the previous section to compute the doubling method Jacobi sum for a torus of the form $\multiplicativegroup{\finiteFieldExtension{k}}$. Let $\alpha \colon \multiplicativegroup{\finiteFieldExtension{k}} \to \multiplicativegroup{\cComplex}$ and $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be characters such that $\involutionPlusOne{\chi} \ne 1$. Our goal is to compute $$\sum_{\substack{x \in \multiplicativegroup{\finiteFieldExtension{k}}\\
-		x \ne 1}} \alpha \left(x\right) \chi\left(\FieldNorm{k}{1}\left(x - 1\right)\right) \chi\left(\FieldNorm{k}{1}\left(\minusInvolution{x} - 1\right)\right).$$
+		x \ne 1}} \alpha \left(x\right) \chi\left(\FieldNorm{k}{1}\left(1 - x\right)\right) \chi\left(\FieldNorm{k}{1}\left(1 - \minusInvolution{x}\right)\right).$$
 This can be rewritten as
 $$\chi\left(-1\right)^k \sum_{\substack{x \in \multiplicativegroup{\finiteFieldExtension{k}}\\
-		x \ne 1}} \alpha \left(x\right) \minusInvolution{\chi}\left(\FieldNorm{k}{1}\left(x\right)\right) \involutionPlusOne{\chi}\left(\FieldNorm{k}{1}\left(x - 1\right)\right).$$
+		x \ne 1}} \alpha \left(x\right) \minusInvolution{\chi}\left(\FieldNorm{k}{1}\left(x\right)\right) \involutionPlusOne{\chi}\left(\FieldNorm{k}{1}\left(1 - x\right)\right).$$
 By the previous section, this equals
 \begin{equation}\label{eq:identity-for-multiplicative-group-of-f-k-gauss-sum}
 	-q^{\frac{k}{2}} \alpha\left(-1\right)  \GaussSumCharacter{\alpha^{-1}}{\chi^{-1}}{\fieldCharacter_{\quadraticFieldExtension{k}}} \GaussSumCharacter{\alpha}{\minusInvolution{\chi}}{\fieldCharacter_{\quadraticFieldExtension{k}}} \tau\left(\involutionPlusOne{\chi}, \fieldCharacter_{\quadraticExtension}\right)^k.
@@ -538,7 +538,7 @@ $$-\left(q^{\frac{m}{2}} \GaussSumCharacter{\beta^{-1}}{\chi^{-1}}{\fieldCharact
 In the next two sections we compute the doubling method Jacobi sum for a torus of the form $\NormOneGroup{2m}$.
 
 Let $\theta \colon \NormOneGroup{2m} \to \multiplicativegroup{\cComplex}$ and $\chi \colon \multiplicativegroup{\quadraticExtension} \to \multiplicativegroup{\cComplex}$ be non-trivial characters, such that $\involutionPlusOne{\chi} \ne 1$. Our goal is to compute $$\sum_{\substack{x \in \NormOneGroup{2m}\\
-		x \ne 1}} \theta \left(x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \quadraticExtension}\left(x - 1\right)\right).$$
+		x \ne 1}} \theta \left(x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \quadraticExtension}\left(1 - x\right)\right).$$
 
 We separate two cases: the case $\quadraticExtension = \finiteField$ and the case $\quadraticExtension \ne \finiteField$.
 
@@ -546,7 +546,7 @@ We separate two cases: the case $\quadraticExtension = \finiteField$ and the cas
 In this section, we compute the above exponential sum for the case $\quadraticExtension = \finiteField$. Since $\chi^2 \ne 1$, it follows that $\theta\left(x^{1-q^m}\right) \ne \chi \circ \aFieldNorm_{\finiteFieldExtension{2m} \slash \quadraticExtension}\left(x\right)$ for some $x \in \multiplicativegroup{\finiteFieldExtension{2m}}$.
 
 As usual, we rewrite the sum as follows
-$$q^{-2m} \sum_{z \in \finiteFieldExtension{2m}} \sum_{y \in \multiplicativegroup{\finiteFieldExtension{2m}}} \sum_{x \in \NormOneGroup{2m}} \theta \left(x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteField}\left(y\right)\right) \fieldCharacter_{2m}\left(z\left(y-x+1\right)\right).$$
+$$q^{-2m} \sum_{z \in \finiteFieldExtension{2m}} \sum_{y \in \multiplicativegroup{\finiteFieldExtension{2m}}} \sum_{x \in \NormOneGroup{2m}} \theta \left(x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteField}\left(-y\right)\right) \fieldCharacter_{2m}\left(z\left(y-x+1\right)\right).$$
 
 If $z=0$ then the sum over $y$ will vanish. Hence we can reduce the sum to $z \in \multiplicativegroup{\finiteFieldExtension{2m}}$. Replacing $y$ with $z^{-1} y$ we get the sum
 $$-q^{-m} \tau\left(\chi \circ \aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteField}, \fieldCharacter_{2m}\right) \sum_{z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteField}\left(z\right)\right) \fieldCharacter_{2m}\left(z\right)  \sum_{x \in \NormOneGroup{2m}} \theta \left(-x\right) \fieldCharacter_{2m}\left(xz\right).$$
@@ -570,16 +570,16 @@ By the appendix, this equals
 
 To summarize, we have
 $$\sum_{\substack{x \in \NormOneGroup{2m}\\
-		x \ne 1}} \theta \left(-x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteField}\left(x - 1\right)\right) = q^{\frac{m}{2}} \tau\left(\chi^{-1}, \fieldCharacter\right)^{2m} \tau\left(\chi, \fieldCharacter\right)^{2m} \tau\left(\chi^{2}, \fieldCharacter\right)^m \tau\left(\theta' \times \chi^{-1}, \fieldCharacter_{2m}\right),$$
+		x \ne 1}} \theta \left(-x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteField}\left(1 - x\right)\right) = q^{\frac{m}{2}} \tau\left(\chi^{-1}, \fieldCharacter\right)^{2m} \tau\left(\chi, \fieldCharacter\right)^{2m} \tau\left(\chi^{2}, \fieldCharacter\right)^m \tau\left(\theta' \times \chi^{-1}, \fieldCharacter_{2m}\right),$$
 where $\theta'\left(t\right) = \theta\left(t^{1-q^m}\right)$.
 Since $\tau\left(\chi^{-1}, \fieldCharacter\right) = \chi\left(-1\right) \conjugate{\tau\left(\chi, \fieldCharacter\right)}$ and since $\chi \ne 1$, this implies the identity
 $$\sum_{\substack{x \in \NormOneGroup{2m}\\
-		x \ne 1}} \theta \left(x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteField}\left(x - 1\right)\right) = \theta\left(-1\right) q^{\frac{m}{2}} \tau\left(\chi^{2}, \fieldCharacter\right)^m \tau\left(\theta' \times \chi^{-1}, \fieldCharacter_{2m}\right).$$
+		x \ne 1}} \theta \left(x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteField}\left(1 - x\right)\right) = \theta\left(-1\right) q^{\frac{m}{2}} \tau\left(\chi^{2}, \fieldCharacter\right)^m \tau\left(\theta' \times \chi^{-1}, \fieldCharacter_{2m}\right).$$
 
 \subsubsection{Elliptic torus computation: the case $\quadraticExtension \ne \finiteField$}
 In this section, we compute the above exponential sum for the case $\quadraticExtension = \finiteFieldExtension{2}$. Let $\chi \colon \multiplicativegroup{\finiteFieldExtension{2}} \to \multiplicativegroup{\cComplex}$. We wish to compute the following sum.
 $$\sum_{\substack{x \in \NormOneGroup{2m}\\
-		x \ne 1}} \theta \left(x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{2}}\left(x - 1\right)\right).$$
+		x \ne 1}} \theta \left(x\right) \chi\left(\aFieldNorm_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{2}}\left(1 - x\right)\right).$$
 By the appendix, this equals
 $$\theta\left(-1\right) q^{\frac{m}{2}} \GaussSumCharacter{\theta'}{\minusInvolution{\chi}}{\fieldCharacter_{2m}} \tau\left(\chi \restriction_{\multiplicativegroup{\finiteField}} \circ \FieldNorm{m}{1}, \fieldCharacter_m\right),$$
 which equals
@@ -967,10 +967,10 @@ Replacing $x$ with $y^{-1}x$, and using the Hasse--Davenport relation, we arrive
 $$q^{\frac{1}{2}} \left(q-1\right) \tau\left(\chi, \fieldCharacter\right)^2 \tau\left(\chi^{-2}, \fieldCharacter\right).$$
 
 \subsection{The case $\quadraticExtension \ne \finiteField$}
-Let $\chi \colon \multiplicativegroup{\finiteFieldExtension{2}} \to \multiplicativegroup{\cComplex}$ be a non-trivial character and let $\theta \colon \NormOneGroup{2} \to \multiplicativegroup{\cComplex}$ be a character. Our goal is to compute $$\sum_{1 \ne x \in \NormOneGroup{2}} \theta\left(x\right) \chi\left(x-1\right).$$
+Let $\chi \colon \multiplicativegroup{\finiteFieldExtension{2}} \to \multiplicativegroup{\cComplex}$ be a non-trivial character and let $\theta \colon \NormOneGroup{2} \to \multiplicativegroup{\cComplex}$ be a character. Our goal is to compute $$\sum_{1 \ne x \in \NormOneGroup{2}} \theta\left(x\right) \chi\left(1-x\right).$$
 Using the Hilbert 90 map this is equivalent to
 $$\frac{1}{q-1} \sum_{\substack{x \in \multiplicativegroup{\finiteFieldExtension{2}}\\
-x \notin \multiplicativegroup{\finiteField}}} \theta\left(\frac{x}{x^q}\right) \chi\left(\frac{x}{x^q}-1\right).$$
+x \notin \multiplicativegroup{\finiteField}}} \theta\left(\frac{x}{x^q}\right) \chi\left(1-\frac{x}{x^q}\right).$$
 Let $0 \ne \delta \in \multiplicativegroup{\finiteFieldExtension{2}}$ be a trace-zero element. Replacing $x$ with $\delta x$, we arrive at the sum
 $$\frac{\theta\left(-1\right) \chi\left(-1\right)}{q-1} \sum_{\substack{x \in \multiplicativegroup{\finiteFieldExtension{2}}\\
 		x \notin \delta^{-1} \multiplicativegroup{\finiteField}}} \theta'\left(x\right) \minusInvolution{\chi}\left(x\right) \chi\left(\trace_{\finiteFieldExtension{2} \slash \finiteField} x\right),$$
